--- a/package.json
+++ b/package.json
@@ -4,15 +4,19 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "npx next build",
     "start": "next start",
     "lint": "eslint"
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.93.3",
     "clsx": "^2.1.1",
+    "eslint-config-next": "^15.1.7",
     "lucide-react": "^0.563.0",
+    "next": "^15.1.7",
     "pdf-lib": "^1.17.1",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
     "sharp": "^0.34.5",
     "tailwind-merge": "^3.4.0"
   },
