--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@elevenlabs/react": "^0.14.0",
     "@supabase/supabase-js": "^2.93.3",
     "clsx": "^2.1.1",
     "eslint-config-next": "^15.1.7",
