--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@elevenlabs/react": "^0.14.0",
     "@supabase/supabase-js": "^2.93.3",
+    "axios": "^1.13.5",
     "clsx": "^2.1.1",
     "dotenv": "^17.2.4",
     "eslint-config-next": "^15.1.7",
